# learning_rust

./: README.md
data_structures/01_linkedlist/: .python-version  list.py
introduction_to_axum/tutorial/: Cargo.toml
introduction_to_axum/tutorial/curls/: c1.sh  c2.sh  c3.sh  c4.sh  c5.sh
introduction_to_axum/tutorial/src/: lib.rs  main.rs
introduction_to_axum/tutorial/src/routes/: header_extractor.rs  mirror_body_json.rs  mirror_body_string.rs  mod.rs  path_variables.rs  query_parameters.rs
playground/178_enum_project/: Cargo.toml
playground/196_unwrap_expect/: Cargo.toml
rustlings/exercises/: quiz2.rs
the_biggest_rust_course_online/: note.md
the_biggest_rust_course_online/assignment_section_10_enums/: Cargo.toml
the_biggest_rust_course_online/assignment_section_11_find_and_replace/find_and_replace/: Cargo.toml  dummy_output.json
the_biggest_rust_course_online/assignment_section_11_find_and_replace/find_and_replace/src/: lib.rs  main.rs
the_biggest_rust_course_online/assignment_section_11_generics/: Cargo.toml
the_biggest_rust_course_online/assignment_section_12_closure_iterators/: Cargo.toml
the_biggest_rust_course_online/assignment_section_12_option_enums/: Cargo.toml
the_biggest_rust_course_online/assignment_section_13_pointers/: Cargo.toml
the_biggest_rust_course_online/assignment_section_13_vectors/: Cargo.toml
the_biggest_rust_course_online/assignment_section_14_fitness_app/: Cargo.toml
the_biggest_rust_course_online/assignment_section_2/: Cargo.toml
the_biggest_rust_course_online/assignment_section_3/: Cargo.toml
(+162 files in other folders)
