[package]
name = "tutorial"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["tokio", "macros", "json"] }
axum-extra = { version = "0.10.3", features = ["typed-header"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
