[package]
name = "find_and_replace"
version = "0.1.0"
edition = "2021"
authors = [
    "Clebson Cardoso <clebsondm@gmail.com>"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
regex = "1.10.2"
text-colorizer = "1.0.0"


[[bin]]
name = "fr"
path = "src/main.rs"
